<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ishaanya 2K14</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Menu</string>
    <string name="action_settings">Settings</string>
	<string name="proposed_events">Proposed Events</string>
	<string name="ishaanya_logo">Ishaanya logo</string>

	<string name="college_details">Tripura Institute of Technology
		\nNarsingarh,Agartala
		\nTripura,IN
		\nPin : 799009
		\nPhone : +381 234 2330
		\ntitagartala.nic.in
	</string>

	<!--Social media links-->
	<string name="fb_msg">Like us on Facebook</string>
	<string name="fb_link">https://facebook.com/ishaanya.tit</string>
	<string name="twitter_msg">Follow us on Twitter</string>
	<string name="twitter_link">https://twitter.com/ishaanya2k14</string>
	<string name="merchandise_link">http://merchandise.ishaanya.net</string>
	<string name="merchandise_msg">Buy official merchandise</string>

	<!--Customizable Strings-->
	<!--For the categories in slide out navigation drawer -->

	<string-array name="menu_items">
		<item>Welcome</item>
		<item>Proposed Events</item>
		<item>Workshops and Lectures</item>
		<item>About</item>
	</string-array>

	<!--Corresponding details are present in event_details array in same order-->
	<string-array name="event_names">
		<item>Battle Ground</item>
		<item>BrainForce</item>
		<item>Roboxhibit.14</item>
		<item>Flash Frame</item>
		<item>Circuitronics</item>
		<item>ProSkill</item>
		<item>Penthalon.14</item>
		<item>Innovation Era</item>
		<item>Kryptose</item>
		<item>Nrithyama</item>
		<item>Constrocad</item>
		<item>Pseudocode</item>
		<item>IQuizzi</item>
		<item>Devils\' Ride</item>
		<item>ProStad</item>
		<item>Bioscope</item>
		<item>Arthography</item>
		<item>Canvas</item>
		<item>Clash of Titans</item>
		<item>Mr. &amp; Miss Ishaanya</item>
		<item>Sargam</item>
		<item>Bandmania</item>
	</string-array>

	<!--Event details corresponding to event_names array-->
	<string-array name="event_details">
		<item>LAN gaming</item>
		<item>Civil Engineering</item>
		<item>Robotics</item>
		<item>Photography contest</item>
		<item>PCB designing and simulation</item>
		<item>Slide presentation</item>
		<item>Computer hardware assembling</item>
		<item>Model presentation</item>
		<item>Electronics and Telecommunication</item>
		<item>Dancing competition</item>
		<item>AutoCAD</item>
		<item>Computer Programming</item>
		<item>Quiz Contest</item>
		<item>Biking skills</item>
		<item>STADPRO skills</item>
		<item>Short documentary film</item>
		<item>Script writing</item>
		<item>Painting competition</item>
		<item>Chess game</item>
		<item>Fashion show</item>
		<item>Singing competiton</item>
		<item>Music bands competition</item>
	</string-array>

	<!--corresponding to same order in previous arrays -->
	<string-array name="event_descriptions">
		<item>As one of the most entertaining events of ISHAANYA2k14,
			participants are invited to contest for the title of Gaming Champion in any of the following
			LAN multiplayer  games :\n
			\n<b>- Counter Strike 1.6
			\n- NFS Most Wanted
			\n- Pro Evolution Soccer (PES)</b>
			\n\nfacebook.com/BattleGround06
		</item>
		<item>One of the most important event of
			ISHAANYA2k14, exclusively designed to evaluate
			the knowledge of the participants in the field of
			Civil Engineering comes in a new face and with
			lots of excitement. Details coming soon..
			\n\nfacebook.com/brainforce.14
		</item>
		<item>Mega Robotics event.</item>
		<item>Grand online and offline photography contest.</item>
		<item>Competition based on PCB designing and simulation.</item>
		<item>Slide presentation of any research oriented synopsis of technical thesis,
			industrial beneficiary ideas or scientific analysis,etc.</item>
		<item>Competition based on general understanding of computer and hardware assembling.</item>
		<item>Innovative technical and scientific model presentation.</item>
		<item>Event based on general perception of Electronics and Telecommunication Engineering
			to test ingenuity and knowledge on puzzles.
			\n\nfacebook.com/KryptosOfficial
		</item>
		<item>A dancing competition where participants are to perform and show their talent in dancing
			by group or solo performance.
		\n\nfacebook.com/profile.php?id=761969037165137</item>
		<item>Drawing and designing competition with AutoCAD.</item>
		<item>Event based on general perception of Computer Programming.</item>
		<item>Mega Quiz Contest</item>
		<item>Event to test the Bikers\' skills.</item>
		<item>Event based on drawing and designing skill on STADPRO.
			\n\nfacebook.com/pages/PRO-STAAD/249948368507983
		</item>
		<item>Short documentary film making event.
		\n\nfacebook.com/profile.php?id=1409463705966948</item>
		<item>A script writing skill test based on particular theme.</item>
		<item>Painting competition.
		\n\nfacebook.com/profile.php?id=1409942199252055</item>
		<item>Chess game event.</item>
		<item>Your chance to showcase your dressing sense and compete for the title of Mr. and Miss Ishaanya,
			individually or with your partner.
			Traditional Indian dresses like shirts, suits, salwars, sarees are mainly included.
			\n\nfacebook.com/mr.missishaanya
		</item>
		<item>Singing competiton.</item>
		<item>Music bands competition event.</item>
	</string-array>

	<string-array name="workshop_names">
		<item>Guest lecture by Vishal Gupta</item>
		<item>Workshop on STADPRO</item>
		<item>Android App Development</item>
		<item>PCB Designing</item>
	</string-array>

	<string-array name="workshop_details">
		<item>Assistant Manager at Samsung Research Institute, Noida.</item>
		<item>In association with Tryst,IIT Roorkee.</item>
		<item>Conducted by TechNick, Robotics club of TIT.</item>
		<item> Conducted by TechNick, Robotics club of TIT.</item>
	</string-array>
	<string-array name="workshop_descriptions">
		<item>Feb 22nd</item>
		<item>Feb 22nd 11am</item>
		<item>Feb 21st 11am</item>
		<item>Feb 21st 2pm</item>
	</string-array>

	<!--Welcome page text-->
	<string name="welcome_note">Welcome to the official Android app of <b>Ishaanya 2K14</b>,
		the annual Techno-Cultural Fest of Tripura Institute of Technology.
		\n\nYou can swipe from left or click on top left icon to access the navigation menu.
		\n\nThe event details provided here are incomplete in some places and will be updated accordingly
			as preparations progress and details are finalized.
	</string>

	<string name="event_time">
		<b>Event date : </b>19th - 23rd February 2014.
		\n<b>Event time : </b>9am - 5pm.
	</string>

	<!--Registration msg and link-->
	<string name="reg_msg">
		To participate in any of the events, you are requested to fill the online form by clicking on the link given below.
		\n\nYou will be provided with options to choose event and provide individual or group details.
	</string>

	<string name="reg_link">
		https://docs.google.com/forms/d/1481pKKG699NWBkcdSEQnSTcVJ7r5CPO7QQSlvi_dirE/viewform
	</string>

	<string name="reg_prompt">
		Click here to register
	</string>

</resources>
